--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 11
+# font pango:monospace 11
 
 set $base00 #101218
 set $base01 #1f222d
@@ -31,11 +31,11 @@ set $base0E #c0b7f9
 set $base0F #fcc09e
 
 #install compton, to enable transparency effect of rofi
-exec_always compton -f
+# exec_always compton -f
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+# font pango:DejaVu Sans Mono 14
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -60,15 +60,19 @@ set $right l
 floating_modifier Mod4
 
 # start a terminal
-bindsym Mod4+Return exec i3-sensible-terminal
+# bindsym Mod4+Return exec i3-sensible-terminal
+bindsym Mod4+Return exec gnome-terminal
 
 # kill focused window
 bindsym Mod4+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym Mod4+d exec dmenu_run
-bindsym Mod4+d exec rofi -show run -lines 30 
-bindsym Mod4+o exec rofi -show window -lines 30 -width 1000
+# bindsym Mod4+d exec rofi -show drun -lines 30 
+bindsym Mod4+d exec rofi -show drun 
+bindsym Mod4+Shift+d exec rofi -show run
+
+bindsym Mod4+o exec rofi -show window
 
 bindsym Mod4+p exec i3lock
 # -i "/home/dong/Pictures/wallpaper/dark_lines_blurred_85557_1920x1200.png"
@@ -204,8 +208,8 @@ bindsym Mod4+r mode "resize"
 # finds out, if available)
 
 bar {
-        #status_command i3status
-        status_command i3blocks -c ~/.i3/i3blocks.conf
+        status_command i3status
+        status_command i3blocks -c ~/.config/i3/i3blocks.conf 
 	font pango: System San Francisco Display, FontAwesome 12
         position bottom
         strip_workspace_numbers yes
@@ -239,25 +243,34 @@ bar {
 #
 # Please remove the following exec line:
 #######################################################################
-exec i3-config-wizard
+# exec i3-config-wizard
 
-# bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
-# bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-#bindsym Mod4+x exec i3-exit
+bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
+bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
+#bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
+#bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
+bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
+
+# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+# #bindsym Mod4+x exec i3-exit
 
 # move focused workspace between monitors/output sources
 # the left-right palcement of outputs
 # bindsym Mod4+Ctrl+greater move workspace to output right
 # bindsym Mod4+Ctrl+less move workspace to output left
 # the up-down palcement of outputs
-bindsym Mod4+Ctrl+greater move workspace to output up
-bindsym Mod4+Ctrl+less move workspace to output down
+# bindsym Mod4+Ctrl+greater move workspace to output up
+# bindsym Mod4+Ctrl+less move workspace to output down
+
 # move focuse between monitors/output sources
-bindsym Mod4+Control+Left focus output left
-bindsym Mod4+Control+Right focus output right
+bindsym Mod4+Control+Left move workspace to output right
+bindsym Mod4+Control+Right move workspace to output left
+bindsym Mod4+Control+Up move workspace to output up
+bindsym Mod4+Control+Down move workspace to output down
+
+
 bindsym Mod4+Control+j focus output up
 bindsym Mod4+Control+k focus output down
 bindsym Mod4+Control+h focus output left
@@ -278,11 +291,13 @@ bindsym Mod4+Control+l focus output right
 #     bindsym Escape mode "default"
 # }
 # bindsym $Mod4+p mode "$mode_system"
-bindsym Mod4+Ctrl+p exec gnome-screenshot -i
+# bindsym Mod4+Ctrl+p exec gnome-screenshot -i
+bindsym Mod4+Ctrl+p exec flameshot gui
+
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec light -A 2 # increase screen brightness
+bindsym XF86MonBrightnessDown exec light -U 2 # Decrease screen brightness
 
 # Focus on window activation smart|urgent|focus|none
 focus_on_window_activation urgent
@@ -290,4 +305,34 @@ focus_on_window_activation urgent
 # Drawing marks on window decoration
 # show_marks yes|no
 
+# Active gnome daemon in i3
 
+# exec bash xinput set-prop 13 "libinput Accel Speed" 0.5
+
+# floating_minimum_size 75 x 50
+
+floating_maximum_size 1200 x 800
+
+for_window [class="Navigator"] floating disable
+# to set the file chooser position and size
+# gsettings set org.gtk.Settings.FileChooser window-size '(800, 600)'
+# gsettings set org.gtk.Settings.FileChooser window-position '(100,100)'
+
+# Autostart applications
+# exec --no-startup-id nitrogen --restore; sleep 1; compton -b
+# exec --no-startup-id nm-applet
+# # exec --no-startup-id xfce4-power-manager
+# exec --no-startup-id pamac-tray
+# exec --no-startup-id clipit
+# exec_always --no-startup-id ff-theme-util
+# exec_always --no-startup-id fix_xcursor
+# exec_always --no-startup-id $HOME/.config/polybar/i3wmthemer_bar_launch.sh
+# low battery warning
+exec --no-startup-id i3-battery-popup
+for_window [title="Battery Warning"] sticky enable
+
+
+# setting the tracking touchpad
+# https://major.io/2021/07/18/tray-icons-in-i3/
+# or change the configure here: /etc/X11/xorg.conf.d/
+exec xinput set-prop "DLL09FF:01 06CB:CE39 Touchpad" "libinput Accel Speed" 0.08
